configure database using environment variables